nodejs/versioned_docs/version-1.22/test-assertions.mdx
---
id: test-assertions
title: "Assertions"
---
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

Playwright Test uses [expect](https://jestjs.io/docs/expect) library for test assertions. This library provides a lot of matchers like `toEqual`, `toContain`, `toMatch`, `toMatchSnapshot` and many more:

```js
expect(success).toBeTruthy();
```

Playwright also extends it with convenience async matchers that will wait until the expected condition is met. Consider the following example:

```js
await expect(page.locator('.status')).toHaveText('Submitted');
```

Playwright Test will be re-testing the node with the selector `.status` until fetched Node has the `"Submitted"` text. It will be re-fetching the node and checking it over and over, until the condition is met or until the timeout is reached. You can either pass this timeout or configure it once via the [testConfig.expect](./api/class-testconfig.mdx#test-config-expect) value in test config.

By default, the timeout for assertions is set to 5 seconds. Learn more about [various timeouts](./test-timeouts.mdx).

- [Negating Matchers](#negating-matchers)
- [Soft Assertions](#soft-assertions)
- [Custom Expect Message](#custom-expect-message)
- [Polling](#polling)
- [API reference](#api-reference)
- [expect(locator).toBeChecked([options])](./test-assertions.mdx#locator-assertions-to-be-checked)
- [expect(locator).toBeDisabled([options])](./test-assertions.mdx#locator-assertions-to-be-disabled)
- [expect(locator).toBeEditable([options])](./test-assertions.mdx#locator-assertions-to-be-editable)
- [expect(locator).toBeEmpty([options])](./test-assertions.mdx#locator-assertions-to-be-empty)
- [expect(locator).toBeEnabled([options])](./test-assertions.mdx#locator-assertions-to-be-enabled)
- [expect(locator).toBeFocused([options])](./test-assertions.mdx#locator-assertions-to-be-focused)
- [expect(locator).toBeHidden([options])](./test-assertions.mdx#locator-assertions-to-be-hidden)
- [expect(locator).toBeVisible([options])](./test-assertions.mdx#locator-assertions-to-be-visible)
- [expect(locator).toContainText(expected[, options])](./test-assertions.mdx#locator-assertions-to-contain-text)
- [expect(locator).toHaveAttribute(name, value[, options])](./test-assertions.mdx#locator-assertions-to-have-attribute)
- [expect(locator).toHaveClass(expected[, options])](./test-assertions.mdx#locator-assertions-to-have-class)
- [expect(locator).toHaveCount(count[, options])](./test-assertions.mdx#locator-assertions-to-have-count)
- [expect(locator).toHaveCSS(name, value[, options])](./test-assertions.mdx#locator-assertions-to-have-css)
- [expect(locator).toHaveId(id[, options])](./test-assertions.mdx#locator-assertions-to-have-id)
- [expect(locator).toHaveJSProperty(name, value[, options])](./test-assertions.mdx#locator-assertions-to-have-js-property)
- [expect(locator).toHaveScreenshot([options])](./test-assertions.mdx#locator-assertions-to-have-screenshot)
- [expect(locator).toHaveText(expected[, options])](./test-assertions.mdx#locator-assertions-to-have-text)
- [expect(locator).toHaveValue(value[, options])](./test-assertions.mdx#locator-assertions-to-have-value)
- [expect(locator).not](./test-assertions.mdx#locator-assertions-not)
- [expect(page).toHaveScreenshot([options])](./test-assertions.mdx#page-assertions-to-have-screenshot)
- [expect(page).toHaveTitle(titleOrRegExp[, options])](./test-assertions.mdx#page-assertions-to-have-title)
- [expect(page).toHaveURL(urlOrRegExp[, options])](./test-assertions.mdx#page-assertions-to-have-url)
- [expect(page).not](./test-assertions.mdx#page-assertions-not)
- [expect(apiResponse).toBeOK()](./test-assertions.mdx#api-response-assertions-to-be-ok)
- [expect(apiResponse).not](./test-assertions.mdx#api-response-assertions-not)
- [expect(screenshot).toMatchSnapshot(name[, options])](./test-assertions.mdx#screenshot-assertions-to-match-snapshot-1)
- [expect(screenshot).toMatchSnapshot([options])](./test-assertions.mdx#screenshot-assertions-to-match-snapshot-2)

## Negating Matchers

In general, we can expect the opposite to be true by adding a `.not` to the front of the matchers:

```js
expect(value).not.toEqual(0);
await expect(locator).not.toContainText("some text");
```

## Soft Assertions

By default, failed assertion will terminate test execution. Playwright also supports *soft assertions*: failed soft assertions **do not** terminate test execution, but mark the test as failed.

```js
// Make a few checks that will not stop the test when failed...
await expect.soft(page.locator('#status')).toHaveText('Success');
await expect.soft(page.locator('#eta')).toHaveText('1 day');

// ... and continue the test to check more things.
await page.locator('#next-page').click();
await expect.soft(page.locator('#title')).toHaveText('Make another order');
```

At any point during test execution, you can check whether there were any soft assertion failures:

```js
// Make a few checks that will not stop the test when failed...
await expect.soft(page.locator('#status')).toHaveText('Success');
await expect.soft(page.locator('#eta')).toHaveText('1 day');

// Avoid running further if there were soft assertion failures.
expect(test.info().errors).toBeEmpty();
```

## Custom Expect Message

You can specify a custom error message as a second argument to the `expect` function, for example:

```js
await expect(page.locator('text=Name'), 'should be logged in').toBeVisible();
```

The error would look like this:

```bash
    Error: should be logged in

    Call log:
      - expect.toBeVisible with timeout 5000ms
      - waiting for selector "text=Name"


      2 |
      3 | test('example test', async({ page }) => {
    > 4 |   await expect(page.locator('text=Name'), 'should be logged in').toBeVisible();
        |                                                                  ^
      5 | });
      6 |
```

The same works with soft assertions:

```js
expect.soft(value, 'my soft assertion').toBe(56);
```

## Polling

You can convert any synchronous `expect` to an asynchronous polling one using `expect.poll`.

The following method will poll given function until it returns HTTP status 200:

```js
await expect.poll(async () => {
  const response = await page.request.get('https://api.example.com');
  return response.status();
}, {
  // Custom error message, optional.
  message: 'make sure API eventually succeeds', // custom error message
  // Poll for 10 seconds; defaults to 5 seconds. Pass 0 to disable timeout.
  timeout: 10000,
}).toBe(200);
```

You can also specify custom polling intervals:

```js
await expect.poll(async () => {
  const response = await page.request.get('https://api.example.com');
  return response.status();
}, {
  // Probe, wait 1s, probe, wait 2s, probe, wait 10s, probe, wait 10s, probe, .... Defaults to [100, 250, 500, 1000].
  intervals: [1_000, 2_000, 10_000],
  timeout: 60_000
}).toBe(200);
```

## API reference

See the following pages for Playwright-specific assertions:
- [APIResponseAssertions] assertions for [APIResponse]
- [LocatorAssertions] assertions for [Locator]
- [PageAssertions] assertions for [Page]
- [ScreenshotAssertions] for comparing screenshot with stored value

## expect(locator).not {#locator-assertions-not}
- type: &#60;[LocatorAssertions]&#62;

Makes the assertion check for the opposite condition. For example, this code tests that the Locator doesn't contain text `"error"`:

```js
await expect(locator).not.toContainText('error');
```

## expect(locator).toBeChecked([options]) {#locator-assertions-to-be-checked}
- `options?` &#60;[Object]&#62;
  - `checked?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-be-checked-option-checked"/> &#60;[boolean]&#62;<a href="#locator-assertions-to-be-checked-option-checked" class="list-anchor">#</a>
  - `timeout?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-be-checked-option-timeout"/> &#60;[number]&#62; Time to retry the assertion for. Defaults to `timeout` in `TestConfig.expect`.<a href="#locator-assertions-to-be-checked-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-be-checked-return"/> &#60;[Promise]<[void]>&#62;<a href="#locator-assertions-to-be-checked-return" class="list-anchor">#</a>

Ensures the [Locator] points to a checked input.

```js
const locator = page.locator('.subscribe');
await expect(locator).toBeChecked();
```

## expect(locator).toBeDisabled([options]) {#locator-assertions-to-be-disabled}
- `options?` &#60;[Object]&#62;
  - `timeout?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-be-disabled-option-timeout"/> &#60;[number]&#62; Time to retry the assertion for. Defaults to `timeout` in `TestConfig.expect`.<a href="#locator-assertions-to-be-disabled-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-be-disabled-return"/> &#60;[Promise]<[void]>&#62;<a href="#locator-assertions-to-be-disabled-return" class="list-anchor">#</a>

Ensures the [Locator] points to a disabled element. Element is disabled if it has "disabled" attribute or is disabled via ['aria-disabled'](https://developer.mozilla.org/en-US/docs/Web/Accessibility/ARIA/Attributes/aria-disabled). Note that only native control elements such as HTML `button`, `input`, `select`, `textarea`, `option`, `optgroup` can be disabled by setting "disabled" attribute. "disabled" attribute on other elements is ignored by the browser.

```js
const locator = page.locator('button.submit');
await expect(locator).toBeDisabled();
```

## expect(locator).toBeEditable([options]) {#locator-assertions-to-be-editable}
- `options?` &#60;[Object]&#62;
  - `timeout?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-be-editable-option-timeout"/> &#60;[number]&#62; Time to retry the assertion for. Defaults to `timeout` in `TestConfig.expect`.<a href="#locator-assertions-to-be-editable-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-be-editable-return"/> &#60;[Promise]<[void]>&#62;<a href="#locator-assertions-to-be-editable-return" class="list-anchor">#</a>

Ensures the [Locator] points to an editable element.

```js
const locator = page.locator('input');
await expect(locator).toBeEditable();
```

## expect(locator).toBeEmpty([options]) {#locator-assertions-to-be-empty}
- `options?` &#60;[Object]&#62;
  - `timeout?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-be-empty-option-timeout"/> &#60;[number]&#62; Time to retry the assertion for. Defaults to `timeout` in `TestConfig.expect`.<a href="#locator-assertions-to-be-empty-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-be-empty-return"/> &#60;[Promise]<[void]>&#62;<a href="#locator-assertions-to-be-empty-return" class="list-anchor">#</a>

Ensures the [Locator] points to an empty editable element or to a DOM node that has no text.

```js
const locator = page.locator('div.warning');
await expect(locator).toBeEmpty();
```

## expect(locator).toBeEnabled([options]) {#locator-assertions-to-be-enabled}
- `options?` &#60;[Object]&#62;
  - `timeout?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-be-enabled-option-timeout"/> &#60;[number]&#62; Time to retry the assertion for. Defaults to `timeout` in `TestConfig.expect`.<a href="#locator-assertions-to-be-enabled-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-be-enabled-return"/> &#60;[Promise]<[void]>&#62;<a href="#locator-assertions-to-be-enabled-return" class="list-anchor">#</a>

Ensures the [Locator] points to an enabled element.

```js
const locator = page.locator('button.submit');
await expect(locator).toBeEnabled();
```

## expect(locator).toBeFocused([options]) {#locator-assertions-to-be-focused}
- `options?` &#60;[Object]&#62;
  - `timeout?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-be-focused-option-timeout"/> &#60;[number]&#62; Time to retry the assertion for. Defaults to `timeout` in `TestConfig.expect`.<a href="#locator-assertions-to-be-focused-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-be-focused-return"/> &#60;[Promise]<[void]>&#62;<a href="#locator-assertions-to-be-focused-return" class="list-anchor">#</a>

Ensures the [Locator] points to a focused DOM node.

```js
const locator = page.locator('input');
await expect(locator).toBeFocused();
```

## expect(locator).toBeHidden([options]) {#locator-assertions-to-be-hidden}
- `options?` &#60;[Object]&#62;
  - `timeout?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-be-hidden-option-timeout"/> &#60;[number]&#62; Time to retry the assertion for. Defaults to `timeout` in `TestConfig.expect`.<a href="#locator-assertions-to-be-hidden-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-be-hidden-return"/> &#60;[Promise]<[void]>&#62;<a href="#locator-assertions-to-be-hidden-return" class="list-anchor">#</a>

Ensures the [Locator] points to a hidden DOM node, which is the opposite of [visible](./actionability.mdx#visible).

```js
const locator = page.locator('.my-element');
await expect(locator).toBeHidden();
```

## expect(locator).toBeVisible([options]) {#locator-assertions-to-be-visible}
- `options?` &#60;[Object]&#62;
  - `timeout?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-be-visible-option-timeout"/> &#60;[number]&#62; Time to retry the assertion for. Defaults to `timeout` in `TestConfig.expect`.<a href="#locator-assertions-to-be-visible-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-be-visible-return"/> &#60;[Promise]<[void]>&#62;<a href="#locator-assertions-to-be-visible-return" class="list-anchor">#</a>

Ensures the [Locator] points to a [visible](./actionability.mdx#visible) DOM node.

```js
const locator = page.locator('.my-element');
await expect(locator).toBeVisible();
```

## expect(locator).toContainText(expected[, options]) {#locator-assertions-to-contain-text}
- `expected`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-contain-text-option-expected"/> &#60;[string]|[RegExp]|[Array]<[string]|[RegExp]>&#62; Expected substring or RegExp or a list of those.<a href="#locator-assertions-to-contain-text-option-expected" class="list-anchor">#</a>
- `options?` &#60;[Object]&#62;
  - `timeout?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-contain-text-option-timeout"/> &#60;[number]&#62; Time to retry the assertion for. Defaults to `timeout` in `TestConfig.expect`.<a href="#locator-assertions-to-contain-text-option-timeout" class="list-anchor">#</a>
  - `useInnerText?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-contain-text-option-use-inner-text"/> &#60;[boolean]&#62; Whether to use `element.innerText` instead of `element.textContent` when retrieving DOM node text.<a href="#locator-assertions-to-contain-text-option-use-inner-text" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-contain-text-return"/> &#60;[Promise]<[void]>&#62;<a href="#locator-assertions-to-contain-text-return" class="list-anchor">#</a>

Ensures the [Locator] points to an element that contains the given text. You can use regular expressions for the value as well.

```js
const locator = page.locator('.title');
await expect(locator).toContainText('substring');
await expect(locator).toContainText(/\d messages/);
```

Note that if array is passed as an expected value, entire lists of elements can be asserted:

```js
const locator = page.locator('list > .list-item');
await expect(locator).toContainText(['Text 1', 'Text 4', 'Text 5']);
```

## expect(locator).toHaveAttribute(name, value[, options]) {#locator-assertions-to-have-attribute}
- `name`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-have-attribute-option-name"/> &#60;[string]&#62; Attribute name.<a href="#locator-assertions-to-have-attribute-option-name" class="list-anchor">#</a>
- `value`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-have-attribute-option-value"/> &#60;[string]|[RegExp]&#62; Expected attribute value.<a href="#locator-assertions-to-have-attribute-option-value" class="list-anchor">#</a>
- `options?` &#60;[Object]&#62;
  - `timeout?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-have-attribute-option-timeout"/> &#60;[number]&#62; Time to retry the assertion for. Defaults to `timeout` in `TestConfig.expect`.<a href="#locator-assertions-to-have-attribute-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-have-attribute-return"/> &#60;[Promise]<[void]>&#62;<a href="#locator-assertions-to-have-attribute-return" class="list-anchor">#</a>

Ensures the [Locator] points to an element with given attribute.

```js
const locator = page.locator('input');
await expect(locator).toHaveAttribute('type', 'text');
```

## expect(locator).toHaveClass(expected[, options]) {#locator-assertions-to-have-class}
- `expected`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-have-class-option-expected"/> &#60;[string]|[RegExp]|[Array]<[string]|[RegExp]>&#62; Expected class or RegExp or a list of those.<a href="#locator-assertions-to-have-class-option-expected" class="list-anchor">#</a>
- `options?` &#60;[Object]&#62;
  - `timeout?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-have-class-option-timeout"/> &#60;[number]&#62; Time to retry the assertion for. Defaults to `timeout` in `TestConfig.expect`.<a href="#locator-assertions-to-have-class-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-have-class-return"/> &#60;[Promise]<[void]>&#62;<a href="#locator-assertions-to-have-class-return" class="list-anchor">#</a>

Ensures the [Locator] points to an element with given CSS class.

```js
const locator = page.locator('#component');
await expect(locator).toHaveClass(/selected/);
```

Note that if array is passed as an expected value, entire lists of elements can be asserted:

```js
const locator = page.locator('list > .component');
await expect(locator).toHaveClass(['component', 'component selected', 'component']);
```

## expect(locator).toHaveCount(count[, options]) {#locator-assertions-to-have-count}
- `count`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-have-count-option-count"/> &#60;[number]&#62; Expected count.<a href="#locator-assertions-to-have-count-option-count" class="list-anchor">#</a>
- `options?` &#60;[Object]&#62;
  - `timeout?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-have-count-option-timeout"/> &#60;[number]&#62; Time to retry the assertion for. Defaults to `timeout` in `TestConfig.expect`.<a href="#locator-assertions-to-have-count-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-have-count-return"/> &#60;[Promise]<[void]>&#62;<a href="#locator-assertions-to-have-count-return" class="list-anchor">#</a>

Ensures the [Locator] resolves to an exact number of DOM nodes.

```js
const list = page.locator('list > .component');
await expect(list).toHaveCount(3);
```

## expect(locator).toHaveCSS(name, value[, options]) {#locator-assertions-to-have-css}
- `name`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-have-css-option-name"/> &#60;[string]&#62; CSS property name.<a href="#locator-assertions-to-have-css-option-name" class="list-anchor">#</a>
- `value`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-have-css-option-value"/> &#60;[string]|[RegExp]&#62; CSS property value.<a href="#locator-assertions-to-have-css-option-value" class="list-anchor">#</a>
- `options?` &#60;[Object]&#62;
  - `timeout?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-have-css-option-timeout"/> &#60;[number]&#62; Time to retry the assertion for. Defaults to `timeout` in `TestConfig.expect`.<a href="#locator-assertions-to-have-css-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-have-css-return"/> &#60;[Promise]<[void]>&#62;<a href="#locator-assertions-to-have-css-return" class="list-anchor">#</a>

Ensures the [Locator] resolves to an element with the given computed CSS style.

```js
const locator = page.locator('button');
await expect(locator).toHaveCSS('display', 'flex');
```

## expect(locator).toHaveId(id[, options]) {#locator-assertions-to-have-id}
- `id`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-have-id-option-id"/> &#60;[string]|[RegExp]&#62; Element id.<a href="#locator-assertions-to-have-id-option-id" class="list-anchor">#</a>
- `options?` &#60;[Object]&#62;
  - `timeout?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-have-id-option-timeout"/> &#60;[number]&#62; Time to retry the assertion for. Defaults to `timeout` in `TestConfig.expect`.<a href="#locator-assertions-to-have-id-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-have-id-return"/> &#60;[Promise]<[void]>&#62;<a href="#locator-assertions-to-have-id-return" class="list-anchor">#</a>

Ensures the [Locator] points to an element with the given DOM Node ID.

```js
const locator = page.locator('input');
await expect(locator).toHaveId('lastname');
```

## expect(locator).toHaveJSProperty(name, value[, options]) {#locator-assertions-to-have-js-property}
- `name`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-have-js-property-option-name"/> &#60;[string]&#62; Property name.<a href="#locator-assertions-to-have-js-property-option-name" class="list-anchor">#</a>
- `value`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-have-js-property-option-value"/> &#60;[Object]&#62; Property value.<a href="#locator-assertions-to-have-js-property-option-value" class="list-anchor">#</a>
- `options?` &#60;[Object]&#62;
  - `timeout?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-have-js-property-option-timeout"/> &#60;[number]&#62; Time to retry the assertion for. Defaults to `timeout` in `TestConfig.expect`.<a href="#locator-assertions-to-have-js-property-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-have-js-property-return"/> &#60;[Promise]<[void]>&#62;<a href="#locator-assertions-to-have-js-property-return" class="list-anchor">#</a>

Ensures the [Locator] points to an element with given JavaScript property. Note that this property can be of a primitive type as well as a plain serializable JavaScript object.

```js
const locator = page.locator('.component');
await expect(locator).toHaveJSProperty('loaded', true);
```

## expect(locator).toHaveScreenshot([options]) {#locator-assertions-to-have-screenshot}
- `options?` &#60;[Object]&#62;
  - `animations?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-have-screenshot-option-animations"/> &#60;"disabled"|"allow"&#62; When set to `"disabled"`, stops CSS animations, CSS transitions and Web Animations. Animations get different treatment depending on their duration:<a href="#locator-assertions-to-have-screenshot-option-animations" class="list-anchor">#</a>
    * finite animations are fast-forwarded to completion, so they'll fire `transitionend` event.
    * infinite animations are canceled to initial state, and then played over after the screenshot.

    Defaults to `"allow"` that leaves animations untouched.
  - `caret?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-have-screenshot-option-caret"/> &#60;"hide"|"initial"&#62; When set to `"hide"`, screenshot will hide text caret. When set to `"initial"`, text caret behavior will not be changed.  Defaults to `"hide"`.<a href="#locator-assertions-to-have-screenshot-option-caret" class="list-anchor">#</a>
  - `mask?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-have-screenshot-option-mask"/> &#60;[Array]<[Locator]>&#62; Specify locators that should be masked when the screenshot is taken. Masked elements will be overlayed with a pink box `#FF00FF` that completely covers its bounding box.<a href="#locator-assertions-to-have-screenshot-option-mask" class="list-anchor">#</a>
  - `maxDiffPixelRatio?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-have-screenshot-option-max-diff-pixel-ratio"/> &#60;[number]&#62; An acceptable ratio of pixels that are different to the total amount of pixels, between `0` and `1`. Default is configurable with `TestConfig.expect`. Unset by default.<a href="#locator-assertions-to-have-screenshot-option-max-diff-pixel-ratio" class="list-anchor">#</a>
  - `maxDiffPixels?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-have-screenshot-option-max-diff-pixels"/> &#60;[number]&#62; An acceptable amount of pixels that could be different, default is configurable with `TestConfig.expect`. Default is configurable with `TestConfig.expect`. Unset by default.<a href="#locator-assertions-to-have-screenshot-option-max-diff-pixels" class="list-anchor">#</a>
  - `omitBackground?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-have-screenshot-option-omit-background"/> &#60;[boolean]&#62; Hides default white background and allows capturing screenshots with transparency. Not applicable to `jpeg` images. Defaults to `false`.<a href="#locator-assertions-to-have-screenshot-option-omit-background" class="list-anchor">#</a>
  - `scale?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-have-screenshot-option-scale"/> &#60;"css"|"device"&#62; When set to `"css"`, screenshot will have a single pixel per each css pixel on the page. For high-dpi devices, this will keep screenshots small. Using `"device"` option will produce a single pixel per each device pixel, so screenhots of high-dpi devices will be twice as large or even larger. Defaults to `"device"`.<a href="#locator-assertions-to-have-screenshot-option-scale" class="list-anchor">#</a>
  - `threshold?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-have-screenshot-option-threshold"/> &#60;[number]&#62; An acceptable perceived color difference in the [YIQ color space](https://en.wikipedia.org/wiki/YIQ) between the same pixel in compared images, between zero (strict) and one (lax), default is configurable with `TestConfig.expect`. Defaults to `0.2`.<a href="#locator-assertions-to-have-screenshot-option-threshold" class="list-anchor">#</a>
  - `timeout?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-have-screenshot-option-timeout"/> &#60;[number]&#62; Time to retry the assertion for. Defaults to `timeout` in `TestConfig.expect`.<a href="#locator-assertions-to-have-screenshot-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-have-screenshot-return"/> &#60;[Promise]<[void]>&#62;<a href="#locator-assertions-to-have-screenshot-return" class="list-anchor">#</a>

Ensures that [Locator] resolves to a given screenshot. This function will re-take screenshots until it matches with the saved expectation.

If there's no expectation yet, it will wait until two consecutive screenshots yield the same result, and save the last one as an expectation.

```js
const locator = page.locator('button');
await expect(locator).toHaveScreenshot();
```

## expect(locator).toHaveText(expected[, options]) {#locator-assertions-to-have-text}
- `expected`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-have-text-option-expected"/> &#60;[string]|[RegExp]|[Array]<[string]|[RegExp]>&#62; Expected substring or RegExp or a list of those.<a href="#locator-assertions-to-have-text-option-expected" class="list-anchor">#</a>
- `options?` &#60;[Object]&#62;
  - `timeout?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-have-text-option-timeout"/> &#60;[number]&#62; Time to retry the assertion for. Defaults to `timeout` in `TestConfig.expect`.<a href="#locator-assertions-to-have-text-option-timeout" class="list-anchor">#</a>
  - `useInnerText?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-have-text-option-use-inner-text"/> &#60;[boolean]&#62; Whether to use `element.innerText` instead of `element.textContent` when retrieving DOM node text.<a href="#locator-assertions-to-have-text-option-use-inner-text" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-have-text-return"/> &#60;[Promise]<[void]>&#62;<a href="#locator-assertions-to-have-text-return" class="list-anchor">#</a>

Ensures the [Locator] points to an element with the given text. You can use regular expressions for the value as well.

```js
const locator = page.locator('.title');
await expect(locator).toHaveText(/Welcome, Test User/);
await expect(locator).toHaveText(/Welcome, .*/);
```

Note that if array is passed as an expected value, entire lists of elements can be asserted:

```js
const locator = page.locator('list > .component');
await expect(locator).toHaveText(['Text 1', 'Text 2', 'Text 3']);
```

## expect(locator).toHaveValue(value[, options]) {#locator-assertions-to-have-value}
- `value`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-have-value-option-value"/> &#60;[string]|[RegExp]&#62; Expected value.<a href="#locator-assertions-to-have-value-option-value" class="list-anchor">#</a>
- `options?` &#60;[Object]&#62;
  - `timeout?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-have-value-option-timeout"/> &#60;[number]&#62; Time to retry the assertion for. Defaults to `timeout` in `TestConfig.expect`.<a href="#locator-assertions-to-have-value-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-have-value-return"/> &#60;[Promise]<[void]>&#62;<a href="#locator-assertions-to-have-value-return" class="list-anchor">#</a>

Ensures the [Locator] points to an element with the given input value. You can use regular expressions for the value as well.

```js
const locator = page.locator('input[type=number]');
await expect(locator).toHaveValue(/[0-9]/);
```

## expect(page).not {#page-assertions-not}
- type: &#60;[PageAssertions]&#62;

Makes the assertion check for the opposite condition. For example, this code tests that the page URL doesn't contain `"error"`:

```js
await expect(page).not.toHaveURL('error');
```

## expect(page).toHaveScreenshot([options]) {#page-assertions-to-have-screenshot}
- `options?` &#60;[Object]&#62;
  - `animations?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="page-assertions-to-have-screenshot-option-animations"/> &#60;"disabled"|"allow"&#62; When set to `"disabled"`, stops CSS animations, CSS transitions and Web Animations. Animations get different treatment depending on their duration:<a href="#page-assertions-to-have-screenshot-option-animations" class="list-anchor">#</a>
    * finite animations are fast-forwarded to completion, so they'll fire `transitionend` event.
    * infinite animations are canceled to initial state, and then played over after the screenshot.

    Defaults to `"allow"` that leaves animations untouched.
  - `caret?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="page-assertions-to-have-screenshot-option-caret"/> &#60;"hide"|"initial"&#62; When set to `"hide"`, screenshot will hide text caret. When set to `"initial"`, text caret behavior will not be changed.  Defaults to `"hide"`.<a href="#page-assertions-to-have-screenshot-option-caret" class="list-anchor">#</a>
  - `clip?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="page-assertions-to-have-screenshot-option-clip"/> &#60;[Object]&#62; An object which specifies clipping of the resulting image. Should have the following fields:<a href="#page-assertions-to-have-screenshot-option-clip" class="list-anchor">#</a>
    - `x` &#60;[number]&#62; x-coordinate of top-left corner of clip area
    - `y` &#60;[number]&#62; y-coordinate of top-left corner of clip area
    - `width` &#60;[number]&#62; width of clipping area
    - `height` &#60;[number]&#62; height of clipping area
  - `fullPage?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="page-assertions-to-have-screenshot-option-full-page"/> &#60;[boolean]&#62; When true, takes a screenshot of the full scrollable page, instead of the currently visible viewport. Defaults to `false`.<a href="#page-assertions-to-have-screenshot-option-full-page" class="list-anchor">#</a>
  - `mask?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="page-assertions-to-have-screenshot-option-mask"/> &#60;[Array]<[Locator]>&#62; Specify locators that should be masked when the screenshot is taken. Masked elements will be overlayed with a pink box `#FF00FF` that completely covers its bounding box.<a href="#page-assertions-to-have-screenshot-option-mask" class="list-anchor">#</a>
  - `maxDiffPixelRatio?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="page-assertions-to-have-screenshot-option-max-diff-pixel-ratio"/> &#60;[number]&#62; An acceptable ratio of pixels that are different to the total amount of pixels, between `0` and `1`. Default is configurable with `TestConfig.expect`. Unset by default.<a href="#page-assertions-to-have-screenshot-option-max-diff-pixel-ratio" class="list-anchor">#</a>
  - `maxDiffPixels?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="page-assertions-to-have-screenshot-option-max-diff-pixels"/> &#60;[number]&#62; An acceptable amount of pixels that could be different, default is configurable with `TestConfig.expect`. Default is configurable with `TestConfig.expect`. Unset by default.<a href="#page-assertions-to-have-screenshot-option-max-diff-pixels" class="list-anchor">#</a>
  - `omitBackground?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="page-assertions-to-have-screenshot-option-omit-background"/> &#60;[boolean]&#62; Hides default white background and allows capturing screenshots with transparency. Not applicable to `jpeg` images. Defaults to `false`.<a href="#page-assertions-to-have-screenshot-option-omit-background" class="list-anchor">#</a>
  - `scale?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="page-assertions-to-have-screenshot-option-scale"/> &#60;"css"|"device"&#62; When set to `"css"`, screenshot will have a single pixel per each css pixel on the page. For high-dpi devices, this will keep screenshots small. Using `"device"` option will produce a single pixel per each device pixel, so screenhots of high-dpi devices will be twice as large or even larger. Defaults to `"device"`.<a href="#page-assertions-to-have-screenshot-option-scale" class="list-anchor">#</a>
  - `threshold?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="page-assertions-to-have-screenshot-option-threshold"/> &#60;[number]&#62; An acceptable perceived color difference in the [YIQ color space](https://en.wikipedia.org/wiki/YIQ) between the same pixel in compared images, between zero (strict) and one (lax), default is configurable with `TestConfig.expect`. Defaults to `0.2`.<a href="#page-assertions-to-have-screenshot-option-threshold" class="list-anchor">#</a>
  - `timeout?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="page-assertions-to-have-screenshot-option-timeout"/> &#60;[number]&#62; Time to retry the assertion for. Defaults to `timeout` in `TestConfig.expect`.<a href="#page-assertions-to-have-screenshot-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="page-assertions-to-have-screenshot-return"/> &#60;[Promise]<[void]>&#62;<a href="#page-assertions-to-have-screenshot-return" class="list-anchor">#</a>

Ensures that the page resolves to a given screenshot. This function will re-take screenshots until it matches with the saved expectation.

If there's no expectation yet, it will wait until two consecutive screenshots yield the same result, and save the last one as an expectation.

```js
await expect(page).toHaveScreenshot();
```

## expect(page).toHaveTitle(titleOrRegExp[, options]) {#page-assertions-to-have-title}
- `titleOrRegExp`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="page-assertions-to-have-title-option-title-or-reg-exp"/> &#60;[string]|[RegExp]&#62; Expected title or RegExp.<a href="#page-assertions-to-have-title-option-title-or-reg-exp" class="list-anchor">#</a>
- `options?` &#60;[Object]&#62;
  - `timeout?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="page-assertions-to-have-title-option-timeout"/> &#60;[number]&#62; Time to retry the assertion for. Defaults to `timeout` in `TestConfig.expect`.<a href="#page-assertions-to-have-title-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="page-assertions-to-have-title-return"/> &#60;[Promise]<[void]>&#62;<a href="#page-assertions-to-have-title-return" class="list-anchor">#</a>

Ensures the page has the given title.

```js
await expect(page).toHaveTitle(/.*checkout/);
```

## expect(page).toHaveURL(urlOrRegExp[, options]) {#page-assertions-to-have-url}
- `urlOrRegExp`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="page-assertions-to-have-url-option-url-or-reg-exp"/> &#60;[string]|[RegExp]&#62; Expected substring or RegExp.<a href="#page-assertions-to-have-url-option-url-or-reg-exp" class="list-anchor">#</a>
- `options?` &#60;[Object]&#62;
  - `timeout?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="page-assertions-to-have-url-option-timeout"/> &#60;[number]&#62; Time to retry the assertion for. Defaults to `timeout` in `TestConfig.expect`.<a href="#page-assertions-to-have-url-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="page-assertions-to-have-url-return"/> &#60;[Promise]<[void]>&#62;<a href="#page-assertions-to-have-url-return" class="list-anchor">#</a>

Ensures the page is navigated to the given URL.

```js
await expect(page).toHaveURL(/.*checkout/);
```

## expect(apiResponse).not {#api-response-assertions-not}
- type: &#60;[APIResponseAssertions]&#62;

Makes the assertion check for the opposite condition. For example, this code tests that the response status is not successful:

```js
await expect(response).not.toBeOK();
```

## expect(apiResponse).toBeOK() {#api-response-assertions-to-be-ok}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="api-response-assertions-to-be-ok-return"/> &#60;[Promise]<[void]>&#62;<a href="#api-response-assertions-to-be-ok-return" class="list-anchor">#</a>

Ensures the response status code is within [200..299] range.

```js
await expect(response).toBeOK();
```

## expect(screenshot).toMatchSnapshot(name[, options]) {#screenshot-assertions-to-match-snapshot-1}
- `name`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="screenshot-assertions-to-match-snapshot-1-option-name"/> &#60;[string]|[Array]<[string]>&#62; Snapshot name.<a href="#screenshot-assertions-to-match-snapshot-1-option-name" class="list-anchor">#</a>
- `options?` &#60;[Object]&#62;
  - `maxDiffPixelRatio?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="screenshot-assertions-to-match-snapshot-1-option-max-diff-pixel-ratio"/> &#60;[number]&#62; An acceptable ratio of pixels that are different to the total amount of pixels, between `0` and `1`. Default is configurable with `TestConfig.expect`. Unset by default.<a href="#screenshot-assertions-to-match-snapshot-1-option-max-diff-pixel-ratio" class="list-anchor">#</a>
  - `maxDiffPixels?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="screenshot-assertions-to-match-snapshot-1-option-max-diff-pixels"/> &#60;[number]&#62; An acceptable amount of pixels that could be different, default is configurable with `TestConfig.expect`. Default is configurable with `TestConfig.expect`. Unset by default.<a href="#screenshot-assertions-to-match-snapshot-1-option-max-diff-pixels" class="list-anchor">#</a>
  - `threshold?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="screenshot-assertions-to-match-snapshot-1-option-threshold"/> &#60;[number]&#62; An acceptable perceived color difference in the [YIQ color space](https://en.wikipedia.org/wiki/YIQ) between the same pixel in compared images, between zero (strict) and one (lax), default is configurable with `TestConfig.expect`. Defaults to `0.2`.<a href="#screenshot-assertions-to-match-snapshot-1-option-threshold" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="screenshot-assertions-to-match-snapshot-1-return"/> &#60;[void]&#62;<a href="#screenshot-assertions-to-match-snapshot-1-return" class="list-anchor">#</a>

Ensures that passed value, either a [string] or a [Buffer], matches the expected snapshot stored in the test snapshots directory.

```js
// Basic usage.
expect(await page.screenshot()).toMatchSnapshot('landing-page.png');

// Pass options to customize the snapshot comparison and have a generated name.
expect(await page.screenshot()).toMatchSnapshot('landing-page.png', {
  maxDiffPixels: 27, // allow no more than 27 different pixels.
});

// Configure image matching threshold.
expect(await page.screenshot()).toMatchSnapshot('landing-page.png', { threshold: 0.3 });

// Bring some structure to your snapshot files by passing file path segments.
expect(await page.screenshot()).toMatchSnapshot(['landing', 'step2.png']);
expect(await page.screenshot()).toMatchSnapshot(['landing', 'step3.png']);
```

Learn more about [visual comparisons](./test-snapshots.mdx).

## expect(screenshot).toMatchSnapshot([options]) {#screenshot-assertions-to-match-snapshot-2}
- `options?` &#60;[Object]&#62;
  - `maxDiffPixelRatio?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="screenshot-assertions-to-match-snapshot-2-option-max-diff-pixel-ratio"/> &#60;[number]&#62; An acceptable ratio of pixels that are different to the total amount of pixels, between `0` and `1`. Default is configurable with `TestConfig.expect`. Unset by default.<a href="#screenshot-assertions-to-match-snapshot-2-option-max-diff-pixel-ratio" class="list-anchor">#</a>
  - `maxDiffPixels?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="screenshot-assertions-to-match-snapshot-2-option-max-diff-pixels"/> &#60;[number]&#62; An acceptable amount of pixels that could be different, default is configurable with `TestConfig.expect`. Default is configurable with `TestConfig.expect`. Unset by default.<a href="#screenshot-assertions-to-match-snapshot-2-option-max-diff-pixels" class="list-anchor">#</a>
  - `name?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="screenshot-assertions-to-match-snapshot-2-option-name"/> &#60;[string]|[Array]<[string]>&#62; Snapshot name. If not passed, the test name and ordinals are used when called multiple times.<a href="#screenshot-assertions-to-match-snapshot-2-option-name" class="list-anchor">#</a>
  - `threshold?`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="screenshot-assertions-to-match-snapshot-2-option-threshold"/> &#60;[number]&#62; An acceptable perceived color difference in the [YIQ color space](https://en.wikipedia.org/wiki/YIQ) between the same pixel in compared images, between zero (strict) and one (lax), default is configurable with `TestConfig.expect`. Defaults to `0.2`.<a href="#screenshot-assertions-to-match-snapshot-2-option-threshold" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="screenshot-assertions-to-match-snapshot-2-return"/> &#60;[void]&#62;<a href="#screenshot-assertions-to-match-snapshot-2-return" class="list-anchor">#</a>

Ensures that passed value, either a [string] or a [Buffer], matches the expected snapshot stored in the test snapshots directory.

```js
// Basic usage and the file name is derived from the test name.
expect(await page.screenshot()).toMatchSnapshot();

// Pass options to customize the snapshot comparison and have a generated name.
expect(await page.screenshot()).toMatchSnapshot({
  maxDiffPixels: 27, // allow no more than 27 different pixels.
});

// Configure image matching threshold and snapshot name.
expect(await page.screenshot()).toMatchSnapshot({
  name: 'landing-page.png',
  threshold: 0.3,
});
```

Learn more about [visual comparisons](./test-snapshots.mdx).

[Accessibility]: ./api/class-accessibility.mdx "Accessibility"
[Android]: ./api/class-android.mdx "Android"
[AndroidDevice]: ./api/class-androiddevice.mdx "AndroidDevice"
[AndroidInput]: ./api/class-androidinput.mdx "AndroidInput"
[AndroidSocket]: ./api/class-androidsocket.mdx "AndroidSocket"
[AndroidWebView]: ./api/class-androidwebview.mdx "AndroidWebView"
[APIRequest]: ./api/class-apirequest.mdx "APIRequest"
[APIRequestContext]: ./api/class-apirequestcontext.mdx "APIRequestContext"
[APIResponse]: ./api/class-apiresponse.mdx "APIResponse"
[APIResponseAssertions]: ./test-assertions.mdx "APIResponseAssertions"
[Browser]: ./api/class-browser.mdx "Browser"
[BrowserContext]: ./api/class-browsercontext.mdx "BrowserContext"
[BrowserServer]: ./api/class-browserserver.mdx "BrowserServer"
[BrowserType]: ./api/class-browsertype.mdx "BrowserType"
[CDPSession]: ./api/class-cdpsession.mdx "CDPSession"
[ConsoleMessage]: ./api/class-consolemessage.mdx "ConsoleMessage"
[Coverage]: ./api/class-coverage.mdx "Coverage"
[Dialog]: ./api/class-dialog.mdx "Dialog"
[Download]: ./api/class-download.mdx "Download"
[Electron]: ./api/class-electron.mdx "Electron"
[ElectronApplication]: ./api/class-electronapplication.mdx "ElectronApplication"
[ElementHandle]: ./api/class-elementhandle.mdx "ElementHandle"
[FileChooser]: ./api/class-filechooser.mdx "FileChooser"
[Frame]: ./api/class-frame.mdx "Frame"
[FrameLocator]: ./api/class-framelocator.mdx "FrameLocator"
[JSHandle]: ./api/class-jshandle.mdx "JSHandle"
[Keyboard]: ./api/class-keyboard.mdx "Keyboard"
[Locator]: ./api/class-locator.mdx "Locator"
[LocatorAssertions]: ./test-assertions.mdx "LocatorAssertions"
[Logger]: ./api/class-logger.mdx "Logger"
[Mouse]: ./api/class-mouse.mdx "Mouse"
[Page]: ./api/class-page.mdx "Page"
[PageAssertions]: ./test-assertions.mdx "PageAssertions"
[Playwright]: ./api/class-playwright.mdx "Playwright"
[PlaywrightAssertions]: ./test-assertions.mdx "PlaywrightAssertions"
[Request]: ./api/class-request.mdx "Request"
[Response]: ./api/class-response.mdx "Response"
[Route]: ./api/class-route.mdx "Route"
[ScreenshotAssertions]: ./test-assertions.mdx "ScreenshotAssertions"
[Selectors]: ./api/class-selectors.mdx "Selectors"
[TimeoutError]: ./api/class-timeouterror.mdx "TimeoutError"
[Touchscreen]: ./api/class-touchscreen.mdx "Touchscreen"
[Tracing]: ./api/class-tracing.mdx "Tracing"
[Video]: ./api/class-video.mdx "Video"
[WebSocket]: ./api/class-websocket.mdx "WebSocket"
[Worker]: ./api/class-worker.mdx "Worker"
[Fixtures]: ./api/class-fixtures.mdx "Fixtures"
[Test]: ./api/class-test.mdx "Test"
[TestConfig]: ./api/class-testconfig.mdx "TestConfig"
[TestError]: ./api/class-testerror.mdx "TestError"
[TestInfo]: ./api/class-testinfo.mdx "TestInfo"
[TestOptions]: ./api/class-testoptions.mdx "TestOptions"
[TestProject]: ./api/class-testproject.mdx "TestProject"
[WorkerInfo]: ./api/class-workerinfo.mdx "WorkerInfo"
[Location]: ./api/class-location.mdx "Location"
[Reporter]: ./api/class-reporter.mdx "Reporter"
[Suite]: ./api/class-suite.mdx "Suite"
[TestCase]: ./api/class-testcase.mdx "TestCase"
[TestResult]: ./api/class-testresult.mdx "TestResult"
[TestStep]: ./api/class-teststep.mdx "TestStep"
[Element]: https://developer.mozilla.org/en-US/docs/Web/API/element "Element"
[EvaluationArgument]: ./evaluating.mdx#evaluation-argument "EvaluationArgument"
[Promise]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise "Promise"
[iterator]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Iteration_protocols "Iterator"
[origin]: https://developer.mozilla.org/en-US/docs/Glossary/Origin "Origin"
[selector]: https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Selectors "selector"
[Serializable]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/JSON/stringify#Description "Serializable"
[UIEvent.detail]: https://developer.mozilla.org/en-US/docs/Web/API/UIEvent/detail "UIEvent.detail"
[UnixTime]: https://en.wikipedia.org/wiki/Unix_time "Unix Time"
[xpath]: https://developer.mozilla.org/en-US/docs/Web/XPath "xpath"

[Array]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array "Array"
[boolean]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures#Boolean_type "Boolean"
[Buffer]: https://nodejs.org/api/buffer.html#buffer_class_buffer "Buffer"
[ChildProcess]: https://nodejs.org/api/child_process.html "ChildProcess"
[Error]: https://nodejs.org/api/errors.html#errors_class_error "Error"
[EventEmitter]: https://nodejs.org/api/events.html#events_class_eventemitter "EventEmitter"
[function]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Function "Function"
[Map]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Map "Map"
[null]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/null "null"
[number]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures#Number_type "Number"
[Object]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Object "Object"
[Promise]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise "Promise"
[Readable]: https://nodejs.org/api/stream.html#stream_class_stream_readable "Readable"
[RegExp]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/RegExp "RegExp"
[string]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures#String_type "string"
[void]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/undefined "void"
[URL]: https://nodejs.org/api/url.html "URL"

[all available image tags]: https://mcr.microsoft.com/v2/playwright/tags/list "all available image tags"
[Docker Hub]: https://hub.docker.com/_/microsoft-playwright "Docker Hub"
[Dockerfile.focal]: https://github.com/microsoft/playwright/blob/master/utils/docker/Dockerfile.focal "Dockerfile.focal"
